Backend v0.2(first review plus draft workflow)

--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -8,6 +8,7 @@ coreschema==0.0.4
 cryptography==38.0.4
 defusedxml==0.7.1
 Django==3.2.16
+django-cors-headers==3.13.0
 django-filter==22.1
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
@@ -48,4 +49,5 @@ tomli==2.0.1
 typing_extensions==4.4.0
 uritemplate==4.1.1
 urllib3==1.26.13
+webcolors==1.12
 zipp==3.11.0
