--- a/infra/default.conf
+++ b/infra/default.conf
@@ -3,19 +3,28 @@ server {
 
     server_name 127.0.0.1;
 
-    location /static/ {
+    location /api {
+        proxy_pass http://localhost:8000;
+        proxy_set_header Host $host;
+    }
+
+    location /admin {
+    proxy_pass http://backend:8000/admin;
+    proxy_set_header Host $host;
+    }
+
+    location /backend-static/ {
         root /var/html/;
     }
-    location /media/ {
+    location /backend-media/ {
         root /var/html/;
     }
-    location / {
-        proxy_pass http://backend:8000;
-    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -29,5 +38,6 @@ server {
       location = /50x.html {
         root   /var/html/frontend/;
       }
+
     server_tokens off;
 }
