--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,13 +7,6 @@ services:
     env_file:
       - ./.env
 
-  frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
-    volumes:
-      - ../frontend/:/app/result_build/
-  
   backend:
     image: mtedoradze/foodgram:v0.1
     restart: always
@@ -25,6 +18,15 @@ services:
     env_file:
       - ./.env
 
+  frontend:
+    build:
+      context: ../frontend
+      dockerfile: Dockerfile
+    volumes:
+      - ../frontend/:/app/result_build/
+    depends_on:
+      - backend
+
   nginx:
     image: nginx:1.19.3
     ports:
@@ -33,10 +35,10 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
-      - static_value:/var/html/static/
-      - media_value:/var/html/media/
+      - static_value:/var/html/backend-static/
+      - media_value:/var/html/backend-media/
     depends_on:
-      - backend
+      - frontend
 
 volumes:
   foodgram_data:
