--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,9 +1,30 @@
 server {
     listen 80;
+
+    server_name 127.0.0.1;
+
+    location /api {
+        proxy_pass http://localhost:8000;
+        proxy_set_header Host $host;
+    }
+
+    location /admin {
+    proxy_pass http://backend:8000/admin;
+    proxy_set_header Host $host;
+    }
+
+    location /backend-static/ {
+        root /var/html/;
+    }
+    location /backend-media/ {
+        root /var/html/;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
@@ -18,4 +39,5 @@ server {
         root   /var/html/frontend/;
       }
 
+    server_tokens off;
 }
