--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -1,50 +1,50 @@
 name: Django-app workflow
 
-# on: [push]
+on: [push]
 
-# jobs:
-#   tests:
-#     runs-on: ubuntu-latest
+jobs:
+  tests:
+    runs-on: ubuntu-latest
 
-#     steps:
-#     - uses: actions/checkout@v2
-#     - name: Set up Python
-#       uses: actions/setup-python@v2
-#       with:
-#         python-version: 3.7
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
 
-#     - name: Install dependencies
-#       run: |
-#         python -m pip install --upgrade pip 
-#         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-#         cd backend
-#         pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip 
+        pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
+        cd backend
+        pip install -r requirements.txt
 
-#     - name: Test with flake8 and django tests
-#       run: |
-#         python -m flake8
-#         pytest
+    - name: Test with flake8 and django tests
+      run: |
+        python -m flake8
+        pytest
 
-#   build_and_push_to_docker_hub:
-#     name: Push Docker image to Docker Hub
-#     runs-on: ubuntu-latest
-#     needs: tests
-#     steps:
-#       - name: Check out the repo
-#         uses: actions/checkout@v2 
-#       - name: Set up Docker Buildx
-#         uses: docker/setup-buildx-action@v1 
-#       - name: Login to Docker 
-#         uses: docker/login-action@v1 
-#         with:
-#           username: ${{ secrets.DOCKER_USERNAME }}
-#           password: ${{ secrets.DOCKER_PASSWORD }}
-#       - name: Push to Docker Hub
-#         uses: docker/build-push-action@v2 
-#         with:
-#           file: ./Dockerfile
-#           push: true
-#           tags: mtedoradze/foodgram:v0.1
+  # build_and_push_to_docker_hub:
+  #   name: Push Docker image to Docker Hub
+  #   runs-on: ubuntu-latest
+  #   needs: tests
+  #   steps:
+  #     - name: Check out the repo
+  #       uses: actions/checkout@v2 
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v1 
+  #     - name: Login to Docker 
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKER_USERNAME }}
+  #         password: ${{ secrets.DOCKER_PASSWORD }}
+  #     - name: Push to Docker Hub
+  #       uses: docker/build-push-action@v2 
+  #       with:
+  #         file: ./Dockerfile
+  #         push: true
+  #         tags: mtedoradze/foodgram:v0.1
 
 #   deploy:
 #     runs-on: ubuntu-latest
