Backend v0.2(first review plus draft workflow plus flake8)

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,11 +4,11 @@ ignore =
     F811,
     R504
 exclude =
-    ./foodgram_data/,
+    */foodgram_data/,
     */migrations/,
-    ./media_value,
-    ./static_value,
-    ./venv/
+    */media_value,
+    */static_value,
+    */venv/
 per-file-ignores =
     */settings.py:E501
 max-complexity = 10 
