--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -15,9 +15,10 @@ jobs:
 
     - name: Install dependencies
       run: |
+        cd backend
         python -m pip install --upgrade pip 
         pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-        cd backend/foodgram
+        cd foodgram
         pip install -r requirements.txt
 
     - name: Test with flake8 and django tests
