--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -23,8 +23,8 @@ jobs:
 
     - name: Test with flake8 and django tests
       run: |
+        cd backend
         python -m flake8
-        pytest
 
   # build_and_push_to_docker_hub:
   #   name: Push Docker image to Docker Hub
