--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2 
         with:
-          file: ./Dockerfile
+          file: ../Dockerfile
           push: true
           tags: mtedoradze/foodgram:v0.1
 
