--- a/.github/workflows/foodgram_workflow.yml
+++ b/.github/workflows/foodgram_workflow.yml
@@ -21,55 +21,55 @@ jobs:
         cd foodgram
         pip install -r requirements.txt
 
-    # - name: Test with flake8 and django tests
+    # - name: Test with flake8
     #   run: |
     #     cd backend
-    #     python -m flake8
+    #     python -m flake8 .
 
   build_and_push_to_docker_hub:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
     needs: tests
     steps:
-      - name: Check out the repo
-        uses: actions/checkout@v2 
+      - name: Checkout
+        uses: actions/checkout@v3 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1 
-      - name: Login to Docker 
-        uses: docker/login-action@v1 
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
-        uses: docker/build-push-action@v2 
+        uses: docker/build-push-action@v3
         with:
-          file: ../Dockerfile
+          # file: ../Dockerfile
           push: true
           tags: mtedoradze/foodgram:v0.1
 
-#   deploy:
-#     runs-on: ubuntu-latest
-#     needs: build_and_push_to_docker_hub
-#     steps:
-#     - name: executing remote ssh commands to deploy
-#       uses: appleboy/ssh-action@master
-#       with:
-#         host: ${{ secrets.HOST }}
-#         username: ${{ secrets.USER }}
-#         key: ${{ secrets.SSH_KEY }}
-#         passphrase: ${{ secrets.PASSPHRASE }}
-#         script: |
-#           sudo docker-compose stop
-#           sudo docker-compose rm web
-#           sudo docker-compose pull web
-#           touch .env
-#           echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
-#           echo DB_NAME=${{ secrets.DB_NAME }} >> .env
-#           echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
-#           echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
-#           echo DB_HOST=${{ secrets.DB_HOST }} >> .env
-#           echo DB_PORT=${{ secrets.DB_PORT }} >> .env
-#           sudo docker-compose up -d
+  # deploy:
+  #   runs-on: ubuntu-latest
+  #   needs: build_and_push_to_docker_hub
+  #   steps:
+  #   - name: executing remote ssh commands to deploy
+  #     uses: appleboy/ssh-action@master
+  #     with:
+  #       host: ${{ secrets.HOST }}
+  #       username: ${{ secrets.USER }}
+  #       key: ${{ secrets.SSH_KEY }}
+  #       passphrase: ${{ secrets.PASSPHRASE }}
+  #       script: |
+  #         sudo docker-compose stop
+  #         sudo docker-compose rm backend
+  #         sudo docker-compose pull backend
+  #         touch .env
+  #         echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
+  #         echo DB_NAME=${{ secrets.DB_NAME }} >> .env
+  #         echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
+  #         echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
+  #         echo DB_HOST=${{ secrets.DB_HOST }} >> .env
+  #         echo DB_PORT=${{ secrets.DB_PORT }} >> .env
+  #         sudo docker-compose up -d
 
 #   send_message:
 #     runs-on: ubuntu-latest
