--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -36,7 +36,7 @@ server {
       }
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
-        root   /var/html/frontend/;
+        root   /usr/share/nginx/html;
       }
 
     server_tokens off;
