Backend v0.2(second stage review)

--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -11,8 +11,9 @@ services:
     image: mtedoradze/foodgram:v0.1
     restart: always
     volumes:
-      - static_value:/app/static/
-      - media_value:/app/media/
+      - static_value:/app/backend-static/
+      - media_value:/app/backend-media/
+
     depends_on:
       - db
     env_file:
@@ -37,11 +38,11 @@ services:
       - ../docs/:/usr/share/nginx/html/api/docs/
       - static_value:/var/html/backend-static/
       - media_value:/var/html/backend-media/
+
     depends_on:
       - frontend
 
 volumes:
-  frontend:
   foodgram_data:
   static_value:
   media_value:
