--- a/backend/foodgram/requirements.txt
+++ b/backend/foodgram/requirements.txt
@@ -38,11 +38,13 @@ pytest==7.2.0
 python-dotenv==0.21.0
 python3-openid==3.2.0
 pytz==2022.6
+reportlab
 requests==2.28.1
 requests-oauthlib==1.3.1
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
+sorl-thumbnail==12.9.0
 sqlparse==0.4.3
 tomli==2.0.1
 typing_extensions==4.4.0
