--- a/infra/default.conf
+++ b/infra/default.conf
@@ -4,12 +4,12 @@ server {
     server_name 127.0.0.1;
 
     location /api {
-        proxy_pass http://localhost:8000;
+        proxy_pass http://backend:8000;
         proxy_set_header Host $host;
     }
 
     location /admin {
-    proxy_pass http://backend:8000/admin;
+    proxy_pass http://backend:8000;
     proxy_set_header Host $host;
     }
 
