--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,12 +4,12 @@ server {
     server_name 127.0.0.1;
 
     location /api {
-        proxy_pass http://localhost:8000;
+        proxy_pass http://backend:8000;
         proxy_set_header Host $host;
     }
 
     location /admin {
-    proxy_pass http://backend:8000/admin;
+    proxy_pass http://backend:8000;
     proxy_set_header Host $host;
     }
 
@@ -36,7 +36,7 @@ server {
       }
       error_page   500 502 503 504  /50x.html;
       location = /50x.html {
-        root   /usr/share/nginx/html;
+        root   /var/html/frontend/;
       }
 
     server_tokens off;
