full project in containers v2

--- a/.gitignore
+++ b/.gitignore
@@ -132,6 +132,10 @@ dmypy.json
 .idea
 
 # Data
-foodgram_data
-static_value
-media_value
+foodgram_data/
+static_value/
+media_value/
+recipes.json
+
+#IDE settings
+.vscode
