--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -3,6 +3,8 @@ server {
 
     server_name 127.0.0.1;
 
+    client_max_body_size 10M;
+
     location /api/docs/ {
         root /usr/share/nginx/html/;
         try_files $uri $uri/redoc.html;
